Closed
Bug 241611
Opened 22 years ago
Closed 22 years ago
Possible shutdown crashes due to silliness in nsDownloadManager::Init
Categories
(Toolkit :: Downloads API, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.7
People
(Reporter: bzbarsky, Assigned: mconnor)
Details
(Keywords: crash)
Attachments
(1 file, 1 obsolete file)
|
2.60 KB,
patch
|
bryner
:
review+
|
Details | Diff | Splinter Review |
See SeaMonkey bug 206337. nsDownloaderManager in toolkit has the same exact
problems.
| Assignee | ||
Updated•22 years ago
|
Assignee: bugs → mconnor
Priority: -- → P2
Target Milestone: --- → Firefox0.9
| Assignee | ||
Comment 1•22 years ago
|
||
bz, thanks yet again for keeping Fx in the loop on these :)
| Assignee | ||
Updated•22 years ago
|
Attachment #146987 -
Flags: review?(bryner)
| Reporter | ||
Comment 2•22 years ago
|
||
You need a return NS_OK at the end there, no?
| Assignee | ||
Comment 3•22 years ago
|
||
yeah, that'd be logical... I should have noticed that myself, thanks
Attachment #146987 -
Attachment is obsolete: true
| Assignee | ||
Updated•22 years ago
|
Attachment #146987 -
Flags: review?(bryner)
| Assignee | ||
Updated•22 years ago
|
Attachment #146988 -
Flags: review?(bryner)
Updated•22 years ago
|
Attachment #146988 -
Flags: review?(bryner) → review+
| Assignee | ||
Comment 4•22 years ago
|
||
checked in branch and trunk, 2004-04-26 21:15
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•