Bug 241611: Possible shutdown crashes due to silliness in nsDownloadManager::Init, port of topcrash fix by biesi in bug 206337, r=bryner